fix: static sidebar collapse size

--- a/src/App.css
+++ b/src/App.css
@@ -31,7 +31,7 @@ main {
     align-items: center;
 }
 
-@media(max-width: 699px) {
+@media(max-width: 799px) {
     main {
         grid-template-columns: 50px 1fr;
     }
