--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -46,7 +46,7 @@
     text-decoration: underline;
 }
 
-@media(max-width: 699px) {
+@media(max-width: 799px) {
     .logoHeading {
         display: flex;
         justify-content: center;
